tenzir/integration/data/reference/pipelines_local/test_summarize_dot/step_02.ref
error: could not parse `summarize` operator
 --> <input>:1:29
  |
1 | from stdin read zeek-json | summarize x=count(_path) by .
  |                             ^^^^^^^^^ 
  |
  = note: !! syntax_error: failed to parse summarize operator: ' x=count(_path) by .'